# fastapi-prodkit

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml
docker/dev/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/prometheus/: prometheus.yml
examples/app/: main.py
src/fastapi_prodkit/: __init__.py  app.py  context.py  logging.py
src/fastapi_prodkit/errors/: handlers.py  model.py
src/fastapi_prodkit/health/: router.py
src/fastapi_prodkit/metrics/: prom.py
src/fastapi_prodkit/middleware/: request_context.py
src/fastapi_prodkit/tracing/: otel.py
tests/: test_basic.py  test_errors.py  test_health.py  test_logging.py  test_metrics.py  test_tracing.py
