[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "fastapi-prodkit"
version = "0.1.0"
description = "Modular production rails for FastAPI: request context, structured logging, standard errors, health endpoints, optional metrics/tracing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CursedCat7" }]
keywords = ["fastapi", "observability", "logging", "opentelemetry", "prometheus"]
dependencies = [
  "fastapi>=0.100",
  "pydantic>=2.0",
  "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
  "uvicorn[standard]>=0.23",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.7",
  "types-requests>=2.31.0.20240106",
  "pre-commit>=3.6",
]
metrics = [
  "prometheus-fastapi-instrumentator>=6.0",
]
tracing = [
  "opentelemetry-api>=1.22",
  "opentelemetry-sdk>=1.22",
  "opentelemetry-exporter-otlp>=1.22",
  "opentelemetry-instrumentation-fastapi>=0.43b0",
  "opentelemetry-instrumentation-requests>=0.43b0",
]

[project.urls]
Homepage = "https://github.com/CursedCat7/fastapi-prodkit"
Repository = "https://github.com/CursedCat7/fastapi-prodkit"
Issues = "https://github.com/CursedCat7/fastapi-prodkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_prodkit"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I", "B", "UP"]
lint.ignore = ["E501"]  # line-length handled by formatter style

[tool.ruff.lint.isort]
known-first-party = ["fastapi_prodkit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]